Resume and Photo Updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/abcd12.jpg " alt="Kaushki Singh" width="80">
+          <img src="./assets/images/profile.jpg " alt="Kaushki Singh" width="80">
         </figure>
 
         <div class="info-content">
@@ -1194,7 +1194,7 @@
  
         <div class="contact-container">
           <div class="profile-section">
-              <img src="./assets/images/abcd.jpg" alt="Profile Picture" class="profile-image">
+              <img src="./assets/images/contact.jpg" alt="Profile Picture" class="profile-image">
               <h1 class="profile-username">@Kaushki Singh</h1>
               <p class="profile-description">Looking forward to FullStack Developer Role.</p>
           </div>
